--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.codehaus.groovy:groovy')
+    implementation('org.codehaus.groovy:groovy-xml')
+
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
     runtimeOnly('mysql:mysql-connector-java')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
