--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 file.location = /Users/ankushsharma/Downloads/tpc-di-tools/pdgf/output/Batch1
 
 ###################      DataSource      ################
-spring.datasource.url=jdbc:mysql://localhost:3306/tpc-di-validations-new
+spring.datasource.url=jdbc:mysql://localhost:3306/tpc-di2
 spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.properties.hibernate.jdbc.batch_size = 100000
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.database=mysql
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.hikari.connection-timeout=1000
 spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.maximum-pool-size=10
